<resources>
    <string name="app_name">Dating</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="user_name_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Dont have an account?</string>
    <string name="registerlink">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="register_button">Register</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="loginStatus">com.snaplic.dating.LOGIN_PREFS</string>
    <string name="loginUsername" >com.snaplic.dating.USERNAME</string>
    <string name="loginPassword" >com.snaplic.dating.PASSWORD</string>

</resources>
