<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="snaplic.com.dating.Login"
    tools:showIn="@layout/activity_login">

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginUsername"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:background="@drawable/editback"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
        android:hint="@string/user_name_hint"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/editback"
        android:hint="@string/password_hint"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:layout_below="@id/loginUsername"
        android:textColor="@color/white"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/loginButton"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="150dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:layout_below="@id/loginPassword"
        android:background="@drawable/login_button"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/no_account"
        android:layout_below="@id/loginButton"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerlink"
        android:layout_below="@id/no_account"
        android:textColor="#F50057"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
       />



</RelativeLayout>
