<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="snaplic.com.dating.Register"
        tools:showIn="@layout/activity_register"
        android:layout_marginBottom="10dp">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerFirstname"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:background="@drawable/editback"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Firstname"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerLastname"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:background="@drawable/editback"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Lastname"
            android:layout_below="@id/registerFirstname"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerUsername"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:background="@drawable/editback"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/user_name_hint"
            android:layout_below="@id/registerLastname"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editback"
            android:hint="@string/password_hint"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:layout_below="@id/registerUsername"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerConfirm"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/registerPassword"
            android:textAlignment="center"
            android:background="@drawable/editback"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="150dp"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:layout_below="@id/registerConfirm"
            android:background="@drawable/login_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            />

    </RelativeLayout>


